nikon_microscope/PI_GCS2_DLL.h

BOOL    PI_FUNC_DECL    PI_WriteConfigurationFromDatabaseToController(int ID, const char* szFilter, const char* szConfigurationName, char* szWarnings, int warningsBufferSize);
BOOL    PI_FUNC_DECL    PI_ReadConfigurationFromControllerToDatabase(int ID, const char* szFilter, const char* szConfigurationName, char* szWarnings, int warningsBufferSize);
BOOL    PI_FUNC_DECL    PI_GetAvailableControllerConfigurationsFromDatabase(int ID, char* szConfigurationNames, int configurationNamesBufferSize);
BOOL    PI_FUNC_DECL    PI_GetAvailableControllerConfigurationsFromDatabaseByType(int ID, char* szConfigurationNames, int configurationNamesBufferSize, unsigned int configurationType);