nikon_microscope/PI_GCS2_DLL.bas


Public Declare Function PI_WriteConfigurationFromDatabaseToController Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByVal szFilter As String, ByVal szConfigurationName As String, ByVal szWarnings As String, ByVal warningsBufferSize As Long) As Long
Public Declare Function PI_ReadConfigurationFromControllerToDatabase Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByVal szFilter As String, ByVal szConfigurationName As String, ByVal  szWarnings As String, ByVal warningsBufferSize As Long) As Long
Public Declare Function PI_GetAvailableControllerConfigurationsFromDatabase Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByVal szConfigurationNames As String, ByVal configurationNamesBufferSize As Long) As Long
Public Declare Function PI_GetAvailableControllerConfigurationsFromDatabaseByType Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByVal szConfigurationNames As String, ByVal configurationNamesBufferSize As Long, ByVal configurationType As Long) As Long
